Remove iface rename and add hcloud-controller-manager as addon

--- a/controlplane/controlplane_userdata.tmpl
+++ b/controlplane/controlplane_userdata.tmpl
@@ -21,7 +21,6 @@ write_files:
     token: "${rke2_cluster_secret}"
     node-taint: 
     ${node_taint}
-    cloud-provider-name: "hcloud"
     kube-apiserver-arg:
     - "kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname"
     kubelet-arg:
@@ -38,16 +37,119 @@ write_files:
     spec:
       valuesContent: |-
         flannel:
-          iface: "priv"
+          iface: "ens0"
+- path: /var/lib/rancher/rke2/server/manifests/hcloud-secret.yaml
+  permissions: "0600"
+  owner: root:root
+  content: |
+    apiVersion: v1
+    kind: Secret
+    metadata:
+      name: hcloud
+    type: Opaque
+    data:
+      token: ${api_token_encoded}
+      network: ${lb_id_encoded}
+- path: /var/lib/rancher/rke2/server/manifests/hcloud-ccm-networks.yaml
+  permissions: "0600"
+  owner: root:root
+  content: |
+    # NOTE: this release was tested against kubernetes v1.18.x
+    ---
+    apiVersion: v1
+    kind: ServiceAccount
+    metadata:
+      name: cloud-controller-manager
+      namespace: kube-system
+    ---
+    kind: ClusterRoleBinding
+    apiVersion: rbac.authorization.k8s.io/v1
+    metadata:
+      name: system:cloud-controller-manager
+    roleRef:
+      apiGroup: rbac.authorization.k8s.io
+      kind: ClusterRole
+      name: cluster-admin
+    subjects:
+      - kind: ServiceAccount
+        name: cloud-controller-manager
+        namespace: kube-system
+    ---
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: hcloud-cloud-controller-manager
+      namespace: kube-system
+    spec:
+      replicas: 1
+      revisionHistoryLimit: 2
+      selector:
+        matchLabels:
+          app: hcloud-cloud-controller-manager
+      template:
+        metadata:
+          labels:
+            app: hcloud-cloud-controller-manager
+          annotations:
+            scheduler.alpha.kubernetes.io/critical-pod: ''
+        spec:
+          serviceAccountName: cloud-controller-manager
+          dnsPolicy: Default
+          tolerations:
+            # this taint is set by all kubelets running `--cloud-provider=external`
+            # so we should tolerate it to schedule the cloud controller manager
+            - key: "node.cloudprovider.kubernetes.io/uninitialized"
+              value: "true"
+              effect: "NoSchedule"
+            - key: "CriticalAddonsOnly"
+              operator: "Exists"
+            # cloud controller manages should be able to run on masters
+            - key: "node-role.kubernetes.io/master"
+              effect: NoSchedule
+            - key: "node-role.kubernetes.io/control-plane"
+              effect: NoSchedule
+            - key: "node.kubernetes.io/not-ready"
+              effect: "NoSchedule"
+          hostNetwork: true
+          containers:
+            - image: hetznercloud/hcloud-cloud-controller-manager:v1.12.0
+              name: hcloud-cloud-controller-manager
+              command:
+                - "/bin/hcloud-cloud-controller-manager"
+                - "--cloud-provider=hcloud"
+                - "--leader-elect=false"
+                - "--allow-untagged-cloud"
+                - "--allocate-node-cidrs=true"
+                - "--cluster-cidr=10.244.0.0/16"
+              resources:
+                requests:
+                  cpu: 100m
+                  memory: 50Mi
+              env:
+                - name: NODE_NAME
+                  valueFrom:
+                    fieldRef:
+                      fieldPath: spec.nodeName
+                - name: HCLOUD_TOKEN
+                  valueFrom:
+                    secretKeyRef:
+                      name: hcloud
+                      key: token
+                - name: HCLOUD_NETWORK
+                  valueFrom:
+                    secretKeyRef:
+                      name: hcloud
+                      key: network
+
 - path: /opt/rke2/run_rke2.sh
   permissions: "0755"
   owner: root:root
   content: |
     #!/bin/bash
     internal_ip=$(curl -sfL http://169.254.169.254/hetzner/v1/metadata/private-networks | grep "ip:" | head -n 1| cut -d ":" -f2 | xargs)
-    internal_mac=$(curl -sfL http://169.254.169.254/hetzner/v1/metadata/private-networks | grep "mac_address:" | head -n 1 | awk '{print $2}')
+    # internal_mac=$(curl -sfL http://169.254.169.254/hetzner/v1/metadata/private-networks | grep "mac_address:" | head -n 1 | awk '{print $2}')
     echo "node-ip: $internal_ip" >> /etc/rancher/rke2/config.yaml
-    echo -e "[Match]\nMACAddress=$internal_mac\n[Link]\nName=priv" > /etc/systemd/network/80-internal.link
+    # echo -e "[Match]\nMACAddress=$internal_mac\n[Link]\nName=priv" > /etc/systemd/network/80-internal.link
 
     %{ if master_index != 0 }
     function num_healthy {
