workers: don't pass down hcloud_token
We don't need to poke at the load balancer state. Simply curl the
apiserver endpoint we're trying to connect to until we don't get an
error.

--- a/workers/worker_userdata.tmpl
+++ b/workers/worker_userdata.tmpl
@@ -24,22 +24,9 @@ write_files:
     echo "node-ip: $internal_ip" >> /etc/rancher/rke2/config.yaml
     # echo -e "[Match]\nMACAddress=$internal_mac\n[Link]\nName=priv" > /etc/systemd/network/80-internal.link
 
-    function one_healthy {
-      res=$(jq -r '.load_balancer.targets | .[] | select(.label_selector.selector == "role-controlplane=1") | .targets | any(.health_status | all(.status == "healthy"))')
-      test "$res" = "true"
-    }
-    function get_lb {
-      LB="$(echo ${lb_id} | cut -d \- -f 1)"
-      curl -sSL -H "Authorization: Bearer ${hcloud_token}" "https://api.hetzner.cloud/v1/load_balancers/$LB"
-    }
-    while true; do
-      get_lb | one_healthy
-      if [ "$?" == 0 ]; then
-        break
-      fi
-    echo "master is not ready yet"
-    sleep 10
-    done
+    # Wait for master to be up
+    while ! curl -sk -m 5 "https://${lb_address}:9345"; do sleep 1; done
+
     curl -fsSL https://raw.githubusercontent.com/rancher/rke2/master/install.sh --output install.sh
     chmod u+x install.sh
     INSTALL_RKE2_METHOD='tar' INSTALL_RKE2_TYPE=agent INSTALL_RKE2_CHANNEL="${rke2_channel}" ./install.sh
